preloader animation safari fix

--- a/src/blocks/preloader/preloader.sass
+++ b/src/blocks/preloader/preloader.sass
@@ -11,18 +11,17 @@
   transition: opacity 0.2s ease
 
 .preloader img
-  will-change: transform
   animation: jump 1s cubic-bezier(0.165, 0.44, 0.64, 1) 0s infinite normal forwards
 
 @keyframes jump
   20%
-    transform: translateY(2%) scaleY(0.9)
+    transform: translateY(2px) scaleY(0.9)
   40%
-    transform: translateY(-75%) scaleY(1.2)
+    transform: translateY(-48px) scaleY(1.2)
   50%
-    transform: translateY(10%) scaleY(0.8)
+    transform: translateY(8px) scaleY(0.8)
   70%
-    transform: translateY(-5%) scaleY(1)
+    transform: translateY(-4px) scaleY(1)
   80%, 100%
-    transform: translateY(0) scaleY(1)
+    transform: translateY(0px) scaleY(1)
 
